bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: type mismatch;
 found   : Boolean(false)
 required: String
var x: String = false
                ^BDR:3: error: type mismatch;
 found   : Boolean(false)
 required: String
  x=false;
    ^